# ai-compare

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/plans/: 2026-04-18-ai-compare.md
grading/: grading_criteria.md
logs/: 2026-04-20T18-32-16-00-00_clone-and-solve_etiJoGWREHaAg9cnhBpa5u.eval  2026-04-20T19-07-19-00-00_clone-and-solve_8bh5HBNfrqXsCDbYfhHsUA.eval  2026-04-20T21-00-49-00-00_clone-and-solve_bDER8UEH4MRr8EmDCzFyBU.eval  2026-04-20T21-13-05-00-00_clone-and-solve_83EQSpruGtrX4zHQge6Krs.eval  2026-04-20T21-30-48-00-00_clone-and-solve_Zo7JmSN49m2vHUREbJtECu.eval  2026-04-21T05-49-03-00-00_clone-and-solve_VJ5DyJdLEW4TauJFxc8KwS.eval  2026-04-22T18-27-21-00-00_clone-and-solve_JMDPc69xWUMbQNJjknMkLm.eval  2026-04-23T17-46-06-00-00_clone-and-solve_oMusnvUorqsGmX6RvCzedh.eval
prompts/: task_prompt.md
scorer/: haiku_grader.py
tasks/: clone_and_solve.py
tests/: test_clone_and_solve.py  test_haiku_grader.py
