[project]
name = "ai-compare"
version = "0.1.0"
description = "Compare AI models on agentic coding tasks using inspect-ai and Claude Code"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.52",
    "inspect-swe>=0.1.0",
    "anthropic>=0.42.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
